rebuilding all project,and select the smaller dataset to run